--- a/css/style1.css
+++ b/css/style1.css
@@ -63,6 +63,19 @@ h2 {
     font-family: 'Marcellus', sans-serif;
 }
 
+.Course-Tools {
+  background-color: lightblue;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: left;
+  border-radius: 25px;
+    padding: 20px;
+    border: 5px solid;
+    margin: 10px;
+    max-width: 48em;
+}
+
 #faculty {
     background-color: #f9f7f6;
     display: flex;
