--- a/css/style1.css
+++ b/css/style1.css
@@ -63,7 +63,7 @@ h2 {
     font-family: 'Marcellus', sans-serif;
 }
 
-.Course-Tools {
+.Course-Tools-Title {
   background-color: lightblue;
   display: flex;
   flex-direction: column;
@@ -74,6 +74,19 @@ h2 {
     border: 5px solid;
     margin: 10px;
     max-width: 48em;
+}
+
+.Course-Tools {
+  background-color: lightblue;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: left;
+  /*border-radius: 25px;
+    padding: 20px;
+    border: 5px solid;
+    margin: 10px;
+    max-width: 48em; */
 }
 
 #faculty {
