--- a/css/style2.css
+++ b/css/style2.css
@@ -32,7 +32,7 @@
   position: fixed;
   top: 0;
   right: 0;
-  width: 30%;
+  width: 15%;
   height: 100%;
   background-color: yellow;
 }
@@ -61,16 +61,11 @@ h2 {
 }
 
 .bg {
-  /* The image used */
-  background-image: src("assets/images/Dungeon.jpg");
 
   /* Full height */
   height: 100%;
-
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  transform: rotate(90deg);
+  object-fit: cover;
 }
 
 #courses {
@@ -142,7 +137,7 @@ font-family: 'Marcellus', sans-sans-serif;;
 }
 
 img.pic {
-  width: 100%;
+  width: 75%;
   border: 4px solid #000000;
 }
 
@@ -185,4 +180,5 @@ img.pic {
 font-size: 80%;
 background-color: #d5d6d2;
 padding: 50px;
+position: bottom;
 }
