--- a/css/style2.css
+++ b/css/style2.css
@@ -34,12 +34,12 @@
   right: 0;
   width: 15%;
   height: 100%;
-  background-color: yellow;
+  background-color: gold;
 }
 
 #main-title {
   display: flex;
-  color: #FFDE7A;
+  color: goldenrod;
   font-family: 'Patua One', monospace;
   text-align: center;
   font-size: 4rem;
@@ -60,17 +60,28 @@ h2 {
 
 }
 
+body{
+  background-image: url(/home/vang2660/Documents/lab-1-html-and-css-kylecookie/assets/images/pic4.png);
+  background-repeat: no-repeat;
+}
+
+/*
 .bg {
 
-  /* Full height */
+  Full height
   height: 100%;
   transform: rotate(90deg);
   object-fit: cover;
 }
+*/
 
 #courses {
   background-color: orange;
   font-family: 'Marcellus', sans-serif;
+  justify-content: right;
+  align-content: right;
+  top:0;
+  right:0;
 }
 
 #pslo {
