--- a/css/style2.css
+++ b/css/style2.css
@@ -61,7 +61,7 @@ h2 {
 }
 
 body{
-  background-image: url(/home/vang2660/Documents/lab-1-html-and-css-kylecookie/assets/images/pic4.png);
+  background-image: url(../assets/images/pic4.png);
   background-repeat: no-repeat;
   background-position-x: 75.5%;
 
