--- a/css/style1.css
+++ b/css/style1.css
@@ -58,7 +58,7 @@ h2 {
 #courses {
     background-color: #FFDE7A;
     font-family: 'Marcellus', sans-serif;
-    position: right;
+    /*position: right;*/
 
 }
 
@@ -72,7 +72,7 @@ h2 {
   display: flex;
   flex-direction: column;
   justify-content: right;
-  align-items: right;
+  /*align-items: right;*/
   border-radius: 25px;
     padding: 20px;
     border: 5px solid;
@@ -85,8 +85,8 @@ h2 {
   display: flex;
   flex-direction: column;
   justify-content: left;
-  align-items: left;
-  position: right;
+  /*align-items: left;
+  position: right; */
 
 }
 
