--- a/css/style2.css
+++ b/css/style2.css
@@ -76,7 +76,7 @@ body{
   font-family: 'Marcellus', sans-serif;
   justify-content: right;
   align-content: right;
-  right: right;
+  position: right;
   padding-right: 17%;
 
 }
@@ -95,7 +95,6 @@ body{
 /* Set background color to greenyellow */
 .sectionB {
 background-color: greenyellow;
-
 border-radius: 25px;
   padding: 20px;
   border: 5px solid;
