Removed "fixed" position attribute from faculty container. Working on responsive functionality for mobile (facutly container is currently not displaying properly).

--- a/css/style2.css
+++ b/css/style2.css
@@ -30,7 +30,7 @@
 /* Aligned the faculty container to the left of the screen in a fixed position. Scrolls with webpage. */
 .faculty-container {
   display: flex;
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   width: 10%;
