--- a/css/style2.css
+++ b/css/style2.css
@@ -1,17 +1,12 @@
-/*
- * hint:
- * use # in front of the name of an id from your html page
- * use . in front of the name of a class of things from your html page
- * use , to separate a list of things that have some shared css rule
- */
-
- body {
+/* Adds a background image to the page and positions it to the right of the course/pslo containers. */
+body{
   padding: 30px;
-  background-color: #7A0019;
+  background-color: grey;
   display: flex; /* this is the flexbox model. It adds responsive design to its items */
   flex-direction: column; /* this says how the flex items will align (e.g. 'row') */
-  align-items: right; /* These next two properties center the flex items */
+  align-items: center; /* These next two properties center the flex items */
   justify-content: center;
+  background-image: url(../assets/images/pic4.png);
 }
 
 /*
@@ -20,102 +15,113 @@
 * them side-by-side.
 */
 @media screen and (min-width: 925px) {
-  .pslo-courses-container {
+  .pslo-container {
     display: flex;
     flex-direction: row;
     max-width: 53em;
   }
 }
 
-/* Aligned the faculty container to the left of the screen in a fixed position. Scrolls with webpage. */
-.faculty-container {
-  display: flex;
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 10%;
-  height: 100%;
-  background-color: gold;
+@media screen and (min-width: 925px) {
+  .courses-container {
+    display: flex;
+    flex-direction: row;
+    max-width: 53em;
+  }
 }
 
-/* Positions the main title above the pslo & req. courses containers */
+@media screen and (min-width: 925px) {
+  .tools-container {
+    display: flex;
+    flex-direction: row;
+    max-width: 53em;
+  }
+}
+
 #main-title {
-  left: left;
-  padding-left: 3%;
-  color: yellowgreen;
-  font-family: 'Patua One', monospace;
+  color: maroon;
+  font-family: 'Trebuchet MS', monospace;
   text-align: left;
-  font-size: 4rem;
-
-
+  font-size: 4rem
 }
 
 h2 {
-  font-family: 'EB Garamond', serif;
+  font-family: 'Trebuchet MS', serif;
 }
 
-.sectionA {
-  border-radius: 10px;
-  padding: 10px;
-  border: 10px solid;
-  margin: 10px;
-  max-width: 40em;
-  right: right;
-}
-
-/* Adds a background image to the page and positions it to the right of the course/pslo containers. */
-body{
-  background-image: url(../assets/images/pic4.png);
-  background-repeat: no-repeat;
-  background-position-x: 75.5%;
-}
-
-/* Aligned courses container to the left */
-#courses {
-  background-color: turquoise;
-  font-family: 'Marcellus', sans-serif;
-  justify-content: right;
-  align-content: right;
-  position: right;
-  padding-right: 17%;
-
-}
-
-/* Aligned pslo container to the left */
-#pslo {
-  background-color: turquoise;
-  font-family: 'Marcellus', sans-serif;
-  justify-content: right;
-  align-content: right;
-  right: right;
-  padding-right: 17%;
-
-}
-
-/* Set background color to greenyellow */
-.sectionB {
-background-color: greenyellow;
-border-radius: 25px;
+.pslo-container {
+  border: 5px solid maroon;
+  border-radius: 40px 40px 40px 40px;
   padding: 20px;
-  border: 5px solid;
   margin: 10px;
   max-width: 48em;
+  align-items: center;
+  justify-content: center;
+
 }
 
-/* Set background color to greenyellow */
-.Course-Tools {
-background-color: greenyellow;
-flex-direction: column;
-justify-content: right;
-align-items: right;
+.tools-container {
+  border: 5px solid maroon;
+  border-radius: 40px 40px 40px 40px;
+  padding: 20px;
+  margin: 10px;
+  max-width: 48em;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.courses-container {
+  border: 5px solid maroon;
+  border-radius: 40px 40px 40px 40px;
+  padding: 20px;
+  margin: 10px;
+  max-width: 48em;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.faculty-container {
+  border: 5px solid maroon;
+  border-radius: 40px 40px 40px 40px;
+  padding: 20px;
+  margin: 10px;
+  max-width: 48em;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.validation-container {
+  border: 5px solid maroon;
+  border-radius: 40px 40px 40px 40px;
+  padding: 20px;
+  margin: 10px;
+  max-width: 48em;
+  align-items: center;
+  justify-content: center;
+
+}
+
+#pslo {
+  background-color: #d5d6d2;
+  font-family: 'Trebuchet MS', sans-serif;
+}
+
+#courses {
+  background-color: #d5d6d2;
+  font-family: 'Trebuchet MS', sans-serif;
+}
+
+#tools {
+  background-color: #d5d6d2;
+  font-family: 'Trebuchet MS', sans-serif;
 }
 
 #faculty {
-  background-color: #f9f7f6;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;
+  background-color: #d5d6d2;
+  font-family: 'Trebuchet MS', sans-serif;
 }
 
 #faculty>ul>li {
@@ -137,17 +143,24 @@ align-items: right;
 }
 
 .name {
-font-family: 'Dancing Script', cursive;
-font-size: 2rem;
+  font-family: 'Dancing Script', cursive;
+  font-size: 2rem;
 }
 
 .office {
-font-family: 'Marcellus', sans-sans-serif;;
+  font-family: 'Marcellus', sans-sans-serif;
+}
+
+.pic {
+  width: 100%;
+  border: 4px solid #000000;
+  opacity: 100%;
 }
 
 img.pic {
-  width: 75%;
+  width: 100%;
   border: 4px solid #000000;
+  opacity: 100%;
 }
 
 #style ul {
@@ -177,17 +190,17 @@ img.pic {
 
 #style {
   position: fixed;
-  background-color: #7A0019;
   left: 0;
   right: 0;
   top: 0;
   height: 55px;
   padding-top: 10px;
+  border-radius: 4px;
+  border: 2px transparent;
 }
 
 #validation {
-font-size: 80%;
-background-color: #d5d6d2;
-padding: 50px;
-position: bottom;
+  font-size: 80%;
+  background-color: #d5d6d2;
+  padding: 25px;
 }
