--- a/css/style2.css
+++ b/css/style2.css
@@ -199,6 +199,12 @@ img.pic {
   border: 2px transparent;
 }
 
+#style:active {
+  background-color: #000;
+  box-shadow: 0 8px maroon;
+  transform: translateY(4px);
+}
+
 #validation {
   font-size: 80%;
   background-color: #d5d6d2;
