--- a/css/style2.css
+++ b/css/style2.css
@@ -168,7 +168,7 @@ img.pic {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  border-radius: 4px;
 }
 
 #style li {
@@ -199,7 +199,7 @@ img.pic {
   border: 2px transparent;
 }
 
-#style:active {
+#style li:active {
   background-color: #000;
   box-shadow: 0 8px maroon;
   transform: translateY(4px);
